Added endpoint for scraping price and sales rank
